crates/oxc_react_compiler/tests/snapshots/try-catch-ternary-test-scope-in-iife.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/try-catch-ternary-test-scope-in-iife.js
---
import { c as _c } from "react/compiler-runtime";
// The scope produced by `check(raw)` in the ternary test gets aligned outward to
// span the whole inlined IIFE (both `return`s become reassignments of the IIFE
// temporary + breaks out of the try). That scope's only own declaration lives
// in the ternary *test*, which PruneNonEscapingScopes never visits for
// memoization inputs, so the scope must still be registered when it is
// associated with the reassigned temporary.
function Component() {
	const $ = _c(2);
	const raw = useValue();
	let t0;
	if ($[0] !== raw) {
		try {
			t0 = check(raw) ? raw : null;
		} catch {
			t0 = null;
		}
		$[0] = raw;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
