crates/oxc_react_compiler/tests/snapshots/try-catch-try-immediately-throws-after-constant-propagation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/try-catch-try-immediately-throws-after-constant-propagation.js
---
function Component(props) {
	let x;
	;
	return 42;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ default: 42 }]
};
